/*
 *  Copyright (c) 2016, https://github.com/wubenqi
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package zproto;

option java_package = "com.zchat.engine.zproto";
option java_outer_classname = "ZProto";
option optimize_for = CODE_SIZE;

///////////////////////////////////////////////////////////////////////
// LOGIN_OK_PUSH = 0xff01;
//message LoginOkPush {
//  uint32 app_id = 1;
//  string app_user_id = 2;
//  uint32 user_id = 3;
//  string nick = 4;
//  string avatar = 5;
//}

///////////////////////////////////////////////////////////////////////
// server_auth
// SERVER_AUTH_REQ
message ServerAuthReq {
  uint32 server_id = 1;
  string server_name = 2;
}

// SERVER_AUTH_RSP
message ServerAuthRsp {
}

/*
///////////////////////////////////////////////////////////////////////
// client_auth
// USER_NAME_PASSWORD_AUTH_REQ
message UserNamePasswordAuthReq {
  uint32 app_id = 1;
  string app_user_id = 2;
  // uint32 user_id = 3;
  string password = 4;
}

// USER_NAME_PASSWORD_AUTH_RSP
message UserNamePasswordAuthRsp {
  uint32 app_id = 1;
  string app_user_id = 2;
  uint32 user_id = 3;
  string nick = 4;
  string avatar = 5;
}
*/

///////////////////////////////////////////////////////////////////////
// online
// ClientOnlineReq -> VoidRsp
message ClientOnlineReq {
  uint32 server_id = 1;
  uint64 conn_id = 2;
  uint32 app_id = 3;
  string user_id = 4;
  uint32 state = 5;
}

// CLIENT_ONLINE_RSP
message ClientOnlineRsp {
  uint64 index_id = 1;
}

// ClientOfflineReq
message ClientOfflineReq {
  uint32 server_id = 1;
  uint64 conn_id = 2;
}

// CLIENT_OFFLINE_RSP
message ClientOfflineRsp {
  uint64 index_id = 1;
}
